Changed ios white gap fix to be for ipad only

--- a/app/assets/stylesheets/partials/base/_main.scss
+++ b/app/assets/stylesheets/partials/base/_main.scss
@@ -7,12 +7,11 @@ html {
 	line-height: $line-height-ratio;
 }
 
-/* iOS orientation bug fix: https://github.com/twbs/bootstrap/issues/6643 */
-.ios {
+/* iOS orientation bug fix: https://github.com/twbs/bootstrap/issues/6643. Only happens on iPad on iOS  6.1.3 */
+.ipad {
 	&,
 	body {overflow-x: hidden;}
 
-	/* Have to remove for 'Stores' as it screws up the `z-index` stacking order for header elements */
 	.stores {overflow-x: visible;}
 }
 
